Hemologica-Service PersonRecord encrypt 75%